Version 0.2 (...)

- Changed the way grizzled.readline exposes completion context. Instead of
  exposing a cursor, it exposes a tokenized list, with a special Cursor token.
  This approach fits better with Scala's pattern matching.
- grizzled.collection.MultiIterator is now covariant, not invariant.
- Miscellaneous internal changes where "yield" is used.
- Changed license to New BSD License.

Version 0.1 (1 August, 2009)

- First release.